# folie-generator

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt  test-log.md
examples/: folie-compound.json  folie-compound.rationale.json  folie-field-4x4.json
execution/: generate_folie.py  render_folie.py  viewer.html
references/: folie-grammar.md  rationale-schema.md  spec-schema.md  tschumi-principles.md
tests/: test_smoke.py
