[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "folie-generator"
version = "0.1.0"
description = "Generate Tschumi-compliant Parc de la Villette folies as .glb files"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Elia Rossi — Superfluido Productions", email = "hello@superfluido.ch" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "trimesh>=4.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "shapely>=2.0",
    "mapbox-earcut>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/eliosuperfluido/folie-generator"
Issues   = "https://github.com/eliosuperfluido/folie-generator/issues"

[tool.setuptools]
# Script-based layout, not a package. Explicitly tell setuptools there is
# nothing to pip-build as a module.
packages = []
